# court-whisperer

./: court_whisperer.py  pyproject.toml  scratch copy.ipynb  scratch.ipynb  setup.sh
data/: citation_template.yaml
notebooks/: dev_scratch.ipynb  instructor.ipynb
src/: court_whisperer.py  database.py  transcription.py  types.py
src/language_models/: GPT.py  azure_openai.py  base.py  chat_document.py  openai_gpt.py  utils.py
src/parsing/: json.py  search.py  utils.py
src/prompts/: templates.py
src/tools/: cross_encoder_rerank.py  relevance_extractor.py  semantic_search.py  splade_search.py  subquestion_generator.py
src/utils/: logging.py  pydantic_utils.py  utils.py
