[tool.poetry]
name = "court-whisperer"
version = "0.1.0"
description = "A project to fetch, store, and transcribe court records."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
# openai = "^1.2.0"
openai = "<1"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
html2text = "^2020.1.16"
ffmpeg-python = "^0.2.0"
langchain = "^0.0.337"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
chromadb = "^0.4.17"
matplotlib = "^3.8.2"
duckduckgo-search = "^3.9.6"
google-api-python-client = "^2.108.0"
reportlab = "^4.0.7"
pillow = "^10.1.0"
markdown = "^3.5.1"
tqdm = "^4.66.1"
backoff = "^2.2.1"
tiktoken = "^0.5.1"
tabulate = "^0.9.0"
pydantic = "<2"
whisper = "^1.1.10"
colorlog = "^6.8.0"
nltk = "^3.8.1"
rank-bm25 = "^0.2.2"
thefuzz = "^0.20.0"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
docstring-parser = "^0.15"
datasketch = "^1.6.4"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
